[package]
name = "iroh-dasl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
iroh = "0.35.0"
tokio = { version = "1.45.1", features = ["full"] }
n0-future = "0.1.3"
iroh-s3 = { path = "./iroh-s3" }
iroh-n0des = { git = "https://github.com/n0-computer/iroh-n0des", branch = "b5/push-to-deploy" }
