[package]
name = "iroh-dasl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
iroh = "0.35.0"
tokio = { version = "1.45.1", features = ["full"] }
n0-future = "0.1.3"
iroh-s3 = { path = "./iroh-s3" }
iroh-n0des = { git = "https://github.com/n0-computer/iroh-n0des", branch = "b5/push-to-deploy" }
ipld-core = "0.4.2"
iroh-blobs = "0.35.0"
bytes = "1.10.1"
axum = "0.8.4"
range-collections = "0.4.6"
hyper = "1.6.0"
headers = "0.4.1"
derive_more = { version = "2.0.1", features = ["debug"] }
indicatif = "0.17.11"
flume = "0.11.1"
url = "2.5.4"
mime = "0.3.17"
lru = "0.14.0"
mime_guess = "2.0.5"
tracing = "0.1.41"
tower-http = { version = "0.6.6", features = ["cors"] }
mime_classifier = "0.0.1"
serde_ipld_dagcbor = "0.6.3"
serde_ipld_dagjson = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
dirs-next = "2.0.0"
