[package]
name = "iroh-s3"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
async-trait = "0.1.83"
base64-simd = "0.8.0"
bytes = "1.8.0"
crc32c = "0.6.8"
crc32fast = "1.4.2"
futures = "0.3.31"
hex-simd = "0.8.0"
hyper = { version = "0.14.27", features = [
    "http1",
    "http2",
    "server",
    "stream",
    "runtime",
] }
iroh = "0.35.0"
iroh-blobs = { version = "0.35.0", features = ["rpc"] }
iroh-docs = { version = "0.35.0", features = ["rpc"] }
iroh-gossip = { version = "0.35.0", features = ["rpc"] }
md-5 = "0.10.5"
mime = "0.3.17"
n0-future = "0.1.3"
nugine-rust-utils = "0.3.1"
numeric_cast = "0.2.1"
path-absolutize = "3.1.1"
quic-rpc = "0.20.0"
rust-s3 = "0.35.1"
s3s = "0.9.0"
serde_json = "1.0.132"
sha1 = "0.10.6"
sha2 = "0.10.8"
tokio = { version = "1.41.0", features = ["full"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["io"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
transform-stream = "0.3.0"
uuid = { version = "1.11.0", features = ["v4"] }
